[SCRUM-3799] Fixing layout issues introduced by corporate styling.

--- a/src/ui.sass
+++ b/src/ui.sass
@@ -8,7 +8,6 @@ $lockedButtonColour: #732a2a
 $phone-bp: 720px
 $unified-diff-bp: 1550px
 $detail-panel-font-bp: 880px
-$header-height: 28px
 $footer-height: 220px
 $mobile-footer-height: 280px
 $initial-page-bp: 400px
@@ -70,22 +69,27 @@ body
         height: 42px
 
     @media screen and (min-width: $phone-bp)
-        display: block
+        min-height: 100vh
         height: inherit
         width: inherit
-        margin: 0 0 $mobile-footer-height
+        // overwriting dodgy stylesheet coming from the style guide
         footer
             display: block
+            position: inherit !important
+            margin: 0 !important
+            flex: 0 0 auto
         header
             flex: 0 0 auto
-            height: $header-height
+            height: auto
 
 .navigation::after
     height: 0
 
 .whowas
+    +flex(column)
     height: 100%
     overflow: hidden
+    flex: 1 1 auto
 
     a
         text-decoration: underline;
@@ -120,6 +124,7 @@ body
     .main
         +flex(column)
         height: 100%
+        flex: 1 1 auto
 
     .error
         margin: 1em
@@ -244,6 +249,7 @@ body
 
     .historyPane
         +flex(column)
+        flex: 1 1 auto
         min-width: 0
         min-height: 0
         height: 100%
@@ -255,13 +261,8 @@ body
 
             @media screen and (min-width: $phone-bp)
                 display: block
-                position: absolute;
-                min-height: 100%;
+                min-height: 100%
                 background-color: #f4f4f4
-                // the following is such a terrible kludge introduced by the header and footer
-                // we need to get rid of these and depend on flex/grid entirely
-                margin: 0 0 ($footer-height - ($footer-height * 2)) 0;
-                width: 230px
                 padding: 1em 0 0 0
                 border-right: 1px solid #e5e3e3
                 font-size: small
@@ -293,9 +294,6 @@ body
             width: 100%
             height: 100%
 
-            @media screen and (min-width: $phone-bp)
-                margin-left: 230px
-
             .detailPanelMain
                 +flex(column)
                 width: 100%
@@ -309,7 +307,6 @@ body
 
                 @media screen and (min-width: $detail-panel-font-bp)
                     font-size: inherit
-
 
         .navPanel
             display: none
@@ -772,6 +769,7 @@ body
         .mobileAddedLine
             background-color: #ddffdd
         .mobileRdapDiff
+            margin-top: 0.5em
             margin-bottom: 0.5em
         hr
             margin-top: 0.5em
@@ -784,7 +782,6 @@ body
         flex-wrap: nowrap
         width: 100%
         height: 100%
-        padding-top: 1em
         padding-right: 0.6em
         padding-left: 0.6em
 
@@ -795,7 +792,7 @@ body
         .diffPanelItem
             flex: 1
             display: none
-            padding: 0 0.7em
+            padding: 0.7em
             @media screen and (min-width: $unified-diff-bp)
                 display: inline-block
 
